added sevlet files

--- a/workspace/webworks/WebContent/LoginForm.html
+++ b/workspace/webworks/WebContent/LoginForm.html
@@ -9,6 +9,14 @@
 <form action="login" method="post">
 	Enter User Name <input type="text" name="uname" /><br />
 	Enter password <input type="password" name="pwd"> <br /> 
+	Select Gender <input type="radio" name="gender" value="male"> Male 
+		|<input type="radio" name="gender" value="female"> Female <br>
+	Select Your Hobbies 
+		<input type="checkbox" name="hobbies" value="sports"> Sports |
+		<input type="checkbox" name="hobbies" value="singing">  Singing | 
+		<input type="checkbox" name="hobbies" value="politics"> Politics  | 
+		<input type="checkbox" name="hobbies" value="others"> Others  <br>
+		 
 	<input type="submit">  
 </form>
 </body>
