--- a/web-works/java-script/01-Example.html
+++ b/web-works/java-script/01-Example.html
@@ -13,6 +13,12 @@
     </script>
 
     <button onclick="myfunction()">Call My Function</button>
+    <button onclick="varEx()">MyVar</button>
+    <button onclick="fnCheckVote()">Click To Vote</button>
+    <button onclick="fnAddNumbers()">Add Numbers</button>
+    <button onclick="display()">Calling Display</button>
+    <button onclick="display(10)">Calling Display With Param</button>
+    <button onclick="display(10, 20)">Calling Display With 2 Param</button>
     <noscript> Please enable javascript on your browser </noscript>
   </body>
 </html>
